force-app/main/default/objects/Solution__c/fields/Hero_Image__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image__c</fullName>
    <label>Hero Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>