force-app/main/default/objects/Solution__c/fields/Innovation_areas__c.field-meta.xml
<CustomField>
    <fullName>Innovation_areas__c</fullName>
    <label>Innovation areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Innovation_area</valueSetName>
    </valueSet>
</CustomField>