force-app/main/default/objects/Solution__c/fields/Key_Facts__c.field-meta.xml
<CustomField>
    <fullName>Key_Facts__c</fullName>
    <label>Key Facts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>