force-app/main/default/objects/Solution__c/fields/Long_Form_Content__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Content</label>
    <referenceTo>Long_Form_Content__c</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>