force-app/main/default/objects/Solution__c/fields/Problems_Solved__c.field-meta.xml
<CustomField>
    <fullName>Problems_Solved__c</fullName>
    <label>Problems Solved</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>