force-app/main/default/objects/Solution__c/fields/Solution_Code__c.field-meta.xml
<CustomField>
    <fullName>Solution_Code__c</fullName>
    <label>Solution Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>