force-app/main/default/objects/Solution__c/fields/Solution_Number_new__c.field-meta.xml
<CustomField>
    <fullName>Solution_Number_new__c</fullName>
    <displayFormat>AX0{0000}</displayFormat>
    <label>Solution Number (new)</label>
    <type>AutoNumber</type>
</CustomField>