force-app/main/default/objects/Solution__c/fields/Website_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Website_Visibility__c</fullName>
    <label>Website Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Website_Visibility</valueSetName>
    </valueSet>
</CustomField>