force-app/main/default/objects/Solution__c/validationRules/Solution_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Solution_Code_Format</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
  REGEX(Solution_Code__c, &quot;AX[0-9]{5}&quot;)
)</errorConditionFormula>
    <errorDisplayField>Solution_Code__c</errorDisplayField>
    <errorMessage>Solution Code does not match AX00000 format</errorMessage>
</ValidationRule>