force-app/main/default/objects/Solution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Website_Visibility__c</columns>
    <columns>Innovation_areas__c</columns>
    <columns>Long_Form_Content__c</columns>
    <columns>Solution_Code__c</columns>
    <columns>Slug__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Website_Visibility__c</field>
        <operation>equals</operation>
        <value>Production</value>
    </filters>
    <label>All</label>
</ListView>